web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__README__standard-library__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.mysql\n\nfrom [{x = 13, y = 5}]\nselect {\n  quotient = x / y,\n  int_quotient = x // y,\n}\n"
---
WITH table_0 AS (
    SELECT
        13 AS x,
        5 AS y
)

SELECT
    (x / y) AS quotient,
    (x DIV y) AS int_quotient
FROM table_0
